--- a/Java1/Wk1/MagicEightBall/res/layout/activity_main.xml
+++ b/Java1/Wk1/MagicEightBall/res/layout/activity_main.xml
@@ -13,16 +13,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:layout_centerVertical="true" />
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/textView1"
-        android:layout_marginBottom="69dp"
-        android:text="Button" />
+        android:layout_centerHorizontal="true"
+        android:text="Ask A Question then Click" />
 
 </RelativeLayout>
