--- a/Java1/Wk1/Java1Wk1/res/layout/activity_main.xml
+++ b/Java1/Wk1/Java1Wk1/res/layout/activity_main.xml
@@ -3,65 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-             
-        <Button 
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/go"/>
-        
-    </LinearLayout>
 
-    <GridLayout
-        android:id="@+id/weatherdata"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/go" />
+
+    <TextView
+        android:id="@+id/resultView"
         android:layout_width="match_parent"
         android:layout_height="0dip"
-        android:layout_margin="4dp"
-        android:layout_weight="1.28"
-        android:columnCount="2"
-        android:padding="10dip" >
+        android:layout_weight="0.07" />
 
-        <TextView
-            style="@style/LabelStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/location" />
-
-        <TextView
-            android:id="@+id/data_location"
-            style="@style/DataStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            style="@style/LabelStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/temp" />
-
-        <TextView
-            android:id="@+id/data_temp"
-            style="@style/DataStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            style="@style/LabelStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/condition" />
-
-        <TextView
-            android:id="@+id/data_condition"
-            style="@style/DataStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </GridLayout>
-
-    
 </LinearLayout>
