--- a/Java1/Wk3/ForcastApp/res/values/styles.xml
+++ b/Java1/Wk3/ForcastApp/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -14,7 +14,20 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+          
+        
+    </style>
+    
+    <style name="LabelStyle">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="DataStyle">
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#0000FF</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingLeft">10dip</item>
+    </style>
 </resources>
